--- a/app/src/main/res/layout/item_wifi_item.xml
+++ b/app/src/main/res/layout/item_wifi_item.xml
@@ -67,12 +67,24 @@
                     android:layout_weight="1" />
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/wifi_capability"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_weight="1" />
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/wifi_capability"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:id="@+id/wifi_configured"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_weight="1" />
+            </LinearLayout>
 
 
         </LinearLayout>
