--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -2,16 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_item_1"
+            android:id="@+id/nav_nearby_wfi"
             android:icon="@drawable/baseline_refresh_white_24"
-            android:title="@string/menu_item" />
+            android:title="@string/nearby_wifi" />
         <item
             android:id="@+id/nav_channel_rating"
             android:icon="@drawable/round_star_rate_black_24"
             android:title="@string/channel_rating" />
         <item
-            android:id="@+id/nav_item_3"
+            android:id="@+id/nav_scan_qr_code"
             android:icon="@drawable/baseline_refresh_white_24"
-            android:title="@string/menu_item" />
+            android:title="@string/scan_qr_code" />
     </group>
 </menu>
