Implement input dialog for generate QR code.

--- a/app/src/main/res/layout/activity_qrcode_generate.xml
+++ b/app/src/main/res/layout/activity_qrcode_generate.xml
@@ -6,22 +6,10 @@
     android:orientation="vertical"
     tools:context=".QRCodeGenerateActivity">
 
-    <EditText
-        android:id="@+id/txtQRCode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
-
     <ImageView
-
+        android:layout_gravity="center_horizontal|center_vertical"
         android:id="@+id/imgQRCode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-
-    <Button
-        android:id="@+id/btn_reader"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="QRCode Reader" />
 
 </LinearLayout>
