--- a/app/src/main/res/layout/item_wifi_item.xml
+++ b/app/src/main/res/layout/item_wifi_item.xml
@@ -5,12 +5,13 @@
 
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="0dp"
-    android:layout_marginTop="5dp"
-    android:layout_marginRight="0dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginRight="8dp"
+    android:elevation="4dp"
     android:layout_weight="1"
     android:foreground="?attr/selectableItemBackground"
-    app:cardCornerRadius="0dp">
+    app:cardCornerRadius="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,71 +24,74 @@
         <ImageView
             android:id="@+id/wifi_signal_bar"
             android:layout_width="64dp"
+
             android:layout_height="64dp"
             android:layout_margin="16dp" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="4"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/wifi_ssid"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textColor="@android:color/black"
-
-                android:textSize="20sp" />
-
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_weight="1"
-
+                android:layout_height="match_parent"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/wifi_freq"
+                    android:id="@+id/wifi_ssid"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:layout_marginStart="4dp"
+                    android:textColor="@color/blue_grey_900"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/wifi_strength"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
-
-                <TextView
-                    android:id="@+id/wifi_channel"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                <ImageView
+                    android:id="@+id/wifi_token"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="16dp"
+                    android:src="@drawable/m24g_token" />
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/wifi_mac"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="4dp" />
 
             <LinearLayout
+                android:layout_height="wrap_content"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/wifi_capability"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_weight="1" />
 
-                <TextView
+                <ImageView
                     android:id="@+id/wifi_configured"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
                     android:layout_marginTop="8dp"
-                    android:layout_weight="1" />
+                    android:src="@drawable/round_lock_black_36" />
+
+                <ImageView
+                    android:id="@+id/wifi_saved"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_marginTop="8dp" />
             </LinearLayout>
 
-
         </LinearLayout>
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|start"
+            android:layout_weight="1"
+            android:src="@drawable/round_chevron_right_black_36" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
 
