--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#32344f</color>
+    <color name="colorPrimaryDark">#2a2c45</color>
     <color name="colorAccent">#D81B60</color>
     <color name="linked_wifi_background_color">#1565c0</color>
 
