--- a/app/src/main/res/menu/main_toolbar.xml
+++ b/app/src/main/res/menu/main_toolbar.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu>
     <!--这里是工具栏 main_toolbar 上的各个菜单选项-->
-    <item
-        android:id="@+id/toolbar_menu_refresh"
-        android:icon="@drawable/baseline_refresh_white_24"
-        android:title="@string/refresh"
-        app:showAsAction="always" />
+    <!--<item-->
+    <!--android:id="@+id/toolbar_menu_refresh"-->
+    <!--android:icon="@drawable/baseline_refresh_white_24"-->
+    <!--android:title="@string/refresh"-->
+    <!--app:showAsAction="always" />-->
 </menu>
