Redesigned Wifi information page and optimized several UI components.

--- a/app/src/main/res/layout/activity_locator.xml
+++ b/app/src/main/res/layout/activity_locator.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/main_tool_bar"
+            android:id="@+id/locator_tool_bar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
