--- a/app/src/main/res/layout/item_channel_rate.xml
+++ b/app/src/main/res/layout/item_channel_rate.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
+    android:layout_marginStart="24dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -9,12 +10,14 @@
     <TextView
 
         android:id="@+id/channel_name"
+        android:textColor="@color/blue_grey_900"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
 
     <TextView
         android:id="@+id/channel_rate"
+        android:textColor="@color/blue_grey_900"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="4" />
