--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#2a2b41</color>
-    <color name="colorPrimaryDark">#2a2c45</color>
+    <color name="colorPrimaryDark">#212336</color>
     <color name="colorAccent">#0097a7</color>
     <color name="linked_wifi_background_color">#1565c0</color>
 
