--- a/app/src/main/res/layout/activity_channel_rating.xml
+++ b/app/src/main/res/layout/activity_channel_rating.xml
@@ -19,7 +19,7 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
+        android:background="?attr/colorPrimary"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
@@ -28,20 +28,18 @@
             android:layout_height="?attr/actionBarSize"
             app:contentInsetStartWithNavigation="0dp"
             app:layout_scrollFlags="scroll|enterAlways"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            app:theme="@style/Toolbar.Light" />
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tab_layout"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:tabGravity="fill"
-            app:tabIndicatorColor="@color/deep_orange_500"
+            app:tabIndicatorColor="@color/colorAccent"
             app:tabIndicatorHeight="3dp"
             app:tabMode="fixed"
-            app:tabSelectedTextColor="@color/deep_orange_500"
-            app:tabTextAppearance="@style/TextAppearance.Subhead.Bold"
-            app:tabTextColor="@color/grey_60" />
+            app:tabSelectedTextColor="?attr/colorAccent"
+            app:tabTextAppearance="@style/TextAppearance.Subhead.Bold" />
 
     </android.support.design.widget.AppBarLayout>
 
