--- a/app/src/main/res/layout/activity_qrcode_generate.xml
+++ b/app/src/main/res/layout/activity_qrcode_generate.xml
@@ -25,6 +25,8 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:elevation="16dp"
+        app:cardCornerRadius="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,12 +38,33 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="28dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="14dp"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/qr_code_scanner" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="2dp"
+                    android:text="@string/scan_qr_code_to_connect"
+                    android:textColor="@color/blue_grey_900"
+                    android:textSize="15sp" />
+
+            </LinearLayout>
             <ImageView
                 android:id="@+id/imgQRCode"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/round_arrow_drop_down_black_48"
-                android:layout_margin="24dp"
+                android:layout_marginHorizontal="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -51,8 +74,8 @@
                 android:id="@+id/qrCode_ssid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="24dp"
-                android:layout_marginTop="0dp"
+                android:layout_marginStart="28dp"
+                android:layout_marginBottom="24dp"
                 android:textColor="@color/blue_grey_900"
                 android:textSize="18sp"
                 android:textStyle="bold" />
