--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <group android:checkableBehavior="single">
+    <group
+        android:id="@+id/account_group"
+        android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_log_in"
+            android:icon="@drawable/round_account_circle_black_24"
+            android:title="@string/log_in" />
+
+        <item
+            android:id="@+id/nav_saved_item"
+            android:icon="@drawable/round_save_24"
+            android:title="@string/saved_item" />
+    </group>
+    <group
+        android:id="@+id/wifi_group"
+        android:checkableBehavior="single">
         <item
             android:id="@+id/nav_nearby_wfi"
             android:icon="@drawable/round_near_me_black_36"
@@ -9,17 +24,18 @@
             android:id="@+id/nav_channel_rating"
             android:icon="@drawable/round_star_rate_black_24"
             android:title="@string/channel_rating" />
-        <item
-            android:id="@+id/nav_scan_qr_code"
-            android:icon="@drawable/baseline_refresh_white_24"
-            android:title="@string/scan_qr_code" />
+    </group>
+    <group
+        android:id="@+id/qr_code_group"
+        android:checkableBehavior="single">
         <item
             android:id="@+id/nav_generate_qr_code"
             android:icon="@drawable/qr_code"
             android:title="@string/generate_qr_code" />
         <item
-            android:id="@+id/nav_log_in"
-            android:icon="@drawable/qr_code"
-            android:title="@string/log_in" />
+            android:id="@+id/nav_scan_qr_code"
+            android:icon="@drawable/qr_code_scanner"
+            android:title="@string/scan_qr_code" />
     </group>
+
 </menu>
