Migrate server to Cloud.

--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -10,11 +10,11 @@
     tools:layout_editor_absoluteY="25dp">
 
     <TextView
-        android:id="@+id/info_1"
+        android:id="@+id/drawer_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="@string/username_placeholder"
+        android:text="@string/please_login"
         android:textColor="#F6F6F6F6"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -24,16 +24,16 @@
         app:layout_constraintVertical_bias="0.705" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/drawer_usermail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:text="@string/email_placeholder"
+        android:text=""
         android:textColor="#fff"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/info_1" />
+        app:layout_constraintTop_toBottomOf="@+id/drawer_username" />
 </android.support.constraint.ConstraintLayout>
